--- a/Data Preparation.ipynb
+++ b/Data Preparation.ipynb
@@ -778,7 +778,7 @@
     }
    ],
    "source": [
-    "print(\"Valeurs manquantes:\\n\", df.isnull().sum())"
+    "print(\"Missing Values :\\n\", df.isnull().sum())"
    ]
   },
   {
